fixed some styling on mobile for the homepage. updated styling on product and picture page; ;

--- a/src/css/CheckoutPage.css
+++ b/src/css/CheckoutPage.css
@@ -1,6 +1,7 @@
 .checkout-page {
   background-color: #f9f9f9;
   min-height: 75vh;
+  padding-bottom: 2rem;
 }
 
 .checkout-empty {
