--- a/src/css/PictureList.css
+++ b/src/css/PictureList.css
@@ -1,6 +1,5 @@
 .picture-list {
   padding: 3rem 2rem;
-  background-color: #fdfdfd;
 }
 
 .carousel-arrow {
